--- a/Frontend/src/app/forgot-password/forgot-password.component.scss
+++ b/Frontend/src/app/forgot-password/forgot-password.component.scss
@@ -45,7 +45,7 @@ input {
 button {
   width: 100%;
   padding: 12px;
-  background: #2563eb;
+  background: #f59e0b;
   color: white;
   border: none;
   border-radius: 8px;
@@ -69,6 +69,6 @@ button {
 }
 
 .back-text span {
-  color: #2563eb;
+  color: #f59e0b;
   cursor: pointer;
 }
